-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0 Alpha, 5.5.0 Beta
-
None
-
Reproduced on desktop x86_64 Ubuntu 15.04 and on Android 5.1 on a Nexus 7 and in the Android emulator using the latest beta build of Qt 5.5 for Android released on the 15th of May here: http://download.qt.io/development_releases/qt/5.5/5.5.0-beta/
Steps to reproduce:
1) Create a simple QML application containing a Map element like:
Map {
anchors.fill: parent
plugin: Plugin {
id: osmPlugin
preferred: ["osm"]
}
}
2) Move the map
Expected result:
Application should continue running
Actual result:
Upon finishing the movement a segmentation fault is encountered in QGeoCoordinate::operator==(QGeoCoordinate const&) const ()
Backtrace:
#0 0x00007fffd41b6403 in QGeoCoordinate::operator==(QGeoCoordinate const&) const () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtLocation/../../lib/libQt5Positioning.so.5 #1 0x00007fffd4407619 in QGeoMapController::setCenter(QGeoCoordinate const&) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtLocation/../../lib/libQt5Location.so.5 #2 0x00007fffd443919d in ?? () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtLocation/../../lib/libQt5Location.so.5 #3 0x00007fffd4439503 in QGeoMapController::qt_metacall(QMetaObject::Call, int, void**) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtLocation/../../lib/libQt5Location.so.5 #4 0x00007ffff6a891f5 in QMetaProperty::write(QObject*, QVariant const&) const () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Core.so.5 #5 0x00007ffff6ab1f7f in QObject::setProperty(char const*, QVariant const&) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Core.so.5 #6 0x00007ffff686f8eb in QPropertyAnimation::updateCurrentValue(QVariant const&) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Core.so.5 #7 0x00007ffff686b2b8 in ?? () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Core.so.5 #8 0x00007ffff686bfc1 in ?? () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Core.so.5 #9 0x00007ffff687082d in QPropertyAnimation::updateState(QAbstractAnimation::State, QAbstractAnimation::State) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Core.so.5 #10 0x00007ffff6869f3c in QAbstractAnimation::start(QAbstractAnimation::DeletionPolicy) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Core.so.5 #11 0x00007fffd46b5a37 in ?? () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtLocation/libdeclarative_location.so #12 0x00007fffd46b5ca9 in ?? () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtLocation/libdeclarative_location.so #13 0x00007fffd46b787d in ?? () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtLocation/libdeclarative_location.so #14 0x00007fffd46b8245 in ?? () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtLocation/libdeclarative_location.so #15 0x00007fffd51c4a8a in QQuickWindow::sendEvent(QQuickItem*, QEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtQuick.2/../../lib/libQt5Quick.so.5 #16 0x00007fffd51b6f6a in QQuickItem::ungrabMouse() () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtQuick.2/../../lib/libQt5Quick.so.5 #17 0x00007fffd51b47a8 in QQuickItem::event(QEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtQuick.2/../../lib/libQt5Quick.so.5 #18 0x00007ffff76b035c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Widgets.so.5 #19 0x00007ffff76b54d0 in QApplication::notify(QObject*, QEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Widgets.so.5 #20 0x00007ffff6a7b383 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Core.so.5 #21 0x00007fffd51c4d3d in QQuickWindow::sendEvent(QQuickItem*, QEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtQuick.2/../../lib/libQt5Quick.so.5 #22 0x00007fffd51c5162 in QQuickWindowPrivate::deliverMouseEvent(QMouseEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtQuick.2/../../lib/libQt5Quick.so.5 #23 0x00007fffd51c78a0 in QQuickWindow::mouseReleaseEvent(QMouseEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtQuick.2/../../lib/libQt5Quick.so.5 #24 0x00007ffff57e1135 in QWindow::event(QEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Gui.so.5 #25 0x00007fffd51cd4fb in QQuickWindow::event(QEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/qml/QtQuick.2/../../lib/libQt5Quick.so.5 #26 0x00007ffff76b035c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Widgets.so.5 #27 0x00007ffff76b54d0 in QApplication::notify(QObject*, QEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Widgets.so.5 #28 0x00007ffff6a7b383 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Core.so.5 #29 0x00007ffff57d8b3d in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Gui.so.5 #30 0x00007ffff57da515 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Gui.so.5 #31 0x00007ffff57bf7ef in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Gui.so.5 #32 0x00007fffeec23370 in ?? () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/plugins/platforms/../../lib/libQt5XcbQpa.so.5 #33 0x00007ffff4baac3d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 #34 0x00007ffff4baaf20 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 #35 0x00007ffff4baafcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 #36 0x00007ffff6ad0627 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Core.so.5 #37 0x00007ffff6a78ef2 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Core.so.5 #38 0x00007ffff6a8088d in QCoreApplication::exec() () from /home/mike/src/Qt5.5.0-android/5.5/gcc_64/lib/libQt5Core.so.5 #39 0x0000000000400e94 in main (argc=1, argv=0x7fffffffd8d8) at ../IYFS-android/main.cpp:11
- is duplicated by
-
QTBUG-46384 QML map crashes when releasing mouse button during panning
-
- Closed
-
| For Gerrit Dashboard: QTBUG-46147 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 112511,3 | Fix crash when initiating map flick w/o QtPositioning import | 5.5 | qt/qtlocation | Status: MERGED | +2 | 0 |
| 112512,2 | Ensure that docs always import QtPositioning and QtLocation module | 5.5 | qt/qtlocation | Status: MERGED | +2 | 0 |
| 114287,2 | Fix map flick animation in qquickgeomapgesturearea | dev | qt/qtlocation | Status: DEFERRED | -1 | 0 |
| 114556,3 | Fix map flick animation in qdeclarativegeomapgesturearea | dev | qt/qtlocation | Status: MERGED | +2 | 0 |