src/imports/positioning/positioning.cpp
@@ -34,6 +34,7 @@
 
 #include <QtPositioning/private/qdeclarativegeoaddress_p.h>
 #include <QtPositioning/private/qdeclarativegeolocation_p.h>
+#include <QtPositioning/private/qgeoprojection_p.h>
 
 #include "qdeclarativepositionsource_p.h"
 #include "qdeclarativeposition_p.h"
