src/positioning/qgeoprojection_p.h
@@ -49,12 +49,17 @@
 #endif
 
 #include <qglobal.h>
+#include <QtCore/qvariant.h>
 #include "qpositioningglobal.h"
 
 QT_BEGIN_NAMESPACE
 
 class QGeoCoordinate;
 class QDoubleVector2D;
+
+Q_POSITIONING_EXPORT QVariant geoCoordinateInterpolator(const QGeoCoordinate &from,
+                                                        const QGeoCoordinate &to,
+                                                        qreal progress);
 
 class Q_POSITIONING_EXPORT QGeoProjection
 {
